Created /users/:event_id/events/:id route
