# app/controllers/user.py
@@ -1,8 +1,6 @@
 import app.models.user
 import app.services.frontdesk
-import app.services.session
 import flask
-import bson.objectid
 import json
 
 module = flask.Blueprint('users', __name__, url_prefix='/users')
@@ -17,16 +15,26 @@ def read(id):
 
 @module.route('', methods=['POST'])
 def create():
-	try :
+	try:
 		payload = json.loads(flask.request.get_data().decode('utf-8'))
 	except ValueError:
 		return ('', 422)
 
-	if ('user' not in payload):
+	if 'user' not in payload:
 		return ('', 422)
 
-	if ('temporaryToken' not in payload['user']):
+	if 'id' not in payload['user']:
 		return ('', 422)
+
+	if 'temporaryToken' not in payload['user']:
+		return ('', 422)
+
+	try:
+		app.models.user.User.get_by_id(payload['user']['id'])
+		return ('', 409)
+	except app.models.user.User.DoesNotExist:
+		pass
+
 
 	access_token = app.services.frontdesk.get_access_token(payload['user']['temporaryToken'])
 	if not access_token:
@@ -35,13 +43,15 @@ def create():
 	user_data = app.services.frontdesk.get_user_info(access_token)
 	if not user_data:
 		return ('', 400)
+	user_data['id'] = payload['user']['id']
 	user_data['frontdeskToken'] = access_token
 
 	try:
-		user = app.models.user.User.find_by('frontdeskId', user_data['frontdeskId'])
-		user.update(user_data)
+		app.models.user.User.find_by('frontdeskId', user_data['frontdeskId'])
+		return ('', 409)
 	except app.models.user.User.DoesNotExist:
-		user = app.models.user.User.create(user_data)
+		pass
 
+	user = app.models.user.User.create(user_data)
 	return (user.serialize(), 201)
 
